--- a/index.html
+++ b/index.html
@@ -175,10 +175,6 @@
     <div class="max-w-6xl mx-auto bg-white p-8 rounded-xl shadow-lg">
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">Sorting Algorithm Visualizer</h1>
         <p class="text-center text-gray-600 mb-8">Visually compare the performance and steps of different sorting algorithms.</p>
-        <p class="text-center text-gray-600 text-sm mb-8">
-            Made by 
-            <a href="https://github.com/hrnrxb/sorting_algo" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Hamid Namjoo 😊</a>
-        </p>
 
         <div class="flex flex-col md:flex-row items-start justify-between">
             <!-- Left/Center Content (Controls, Visualizer, Metrics) -->
@@ -269,6 +265,11 @@
         </div>
     </div>
 
+    <footer class="text-center text-gray-600 text-sm mt-8 p-4">
+        Made by 
+        <a href="https://github.com/hrnrxb/sorting_algo" target="_blank" rel="noopener noreferrer" class="text-blue-600 hover:underline">Hamid Namjoo 😊</a>
+    </footer>
+    
     <script>
         // Get DOM elements
         const arrayContainer = document.getElementById('arrayContainer');
